fixed site-wide text alignment

--- a/website/private/components/Card.module.css
+++ b/website/private/components/Card.module.css
@@ -34,7 +34,6 @@
 }
 .title h2 {
   margin: 0;
-  text-align: left;
 }
 .popupContainer {
   top: -1px;
