--- a/website/private/structure/PostSubHeader.module.css
+++ b/website/private/structure/PostSubHeader.module.css
@@ -11,7 +11,6 @@
 }
 .PostSubHeader p {
   max-width: 40ch;
-  text-align: justify;
 }
 @media (max-aspect-ratio: 1/1) {
   .PostSubHeader {
